# quetzal

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .ruff.toml  CFrame.py  CHANGELOG.md  CPipe.py  CUtils.py  Doxyfile  Init.py  InitGui.py  Quetzal_tooltips.py  README.md  ShpstData.py  anyShapez.py  dodoDialogs.py  dodoPM.py  fCmd.py  fFeatures.py  fForms.py  fObservers.py  generate_all_previews.FCMacro  pCmd.py  pFeatures.py  pForms.py  pObservers.py  package.xml  pyrightconfig.json  quetzal_config.py  tooltips.py  uCmd.py  uForms.py
cut_list/: __init__.py  cut_list_commands.py  cut_list_creation.py  cut_list_ui.py  resultSpreadsheet.py
dialogz/: fbranch.ui
html/: annotated.html  classCFrame_1_1FrameBranchManager-members.html  classCFrame_1_1FrameBranchManager.html  classCFrame_1_1adjustFrameAngle-members.html  classCFrame_1_1adjustFrameAngle.html  classCFrame_1_1alignEdge-members.html  classCFrame_1_1alignEdge.html  classCFrame_1_1alignFlange-members.html  classCFrame_1_1alignFlange.html  classCFrame_1_1extend-members.html  classCFrame_1_1extend.html  classCFrame_1_1frameIt-members.html  classCFrame_1_1frameIt.html  classCFrame_1_1insertPath-members.html  classCFrame_1_1insertPath.html  classCFrame_1_1insertSection-members.html  classCFrame_1_1insertSection.html  classCFrame_1_1levelBeam-members.html  classCFrame_1_1levelBeam.html  classCFrame_1_1pivotBeam-members.html  classCFrame_1_1pivotBeam.html  classCFrame_1_1reverseBeam-members.html  classCFrame_1_1reverseBeam.html  classCFrame_1_1rotJoin-members.html  classCFrame_1_1rotJoin.html  (+603 more)
(+126 files in other folders)
